--- a/package.json
+++ b/package.json
@@ -2,27 +2,39 @@
     "name": "@strongline/ui",
     "version": "0.0.1",
     "description": "",
-    "main": "./dist/bundle.js",
+    "main": "webpack.config.js",
     "scripts": {
-        "start": "webpack --watch",
-        "test": "test"
-    },
-    "repository": {
-        "type": "git",
-        "url": "git+https://github.com/strongline-ui/strongline-ui.git"
+        "start": "./node_modules/.bin/webpack-dev-server --config webpack.config.js --port 3001 --hot --inline",
+        "test": "echo \"Error: no test specified\" && exit 1",
+        "bundle": "./node_modules/.bin/webpack --config webpack.config.js"
     },
     "author": "",
-    "license": "BSD",
-    "bugs": {
-        "url": "https://github.com/strongline-ui/strongline-ui/issues"
+    "license": "MIT",
+    "repository": {
+        "type": "git",
+        "url": "git://github.com/strongline/strongline-ui.git"
     },
-    "homepage": "https://github.com/strongline-ui/strongline-ui#readme",
     "devDependencies": {
-        "browser-sync": "^2.18.13",
-        "browser-sync-webpack-plugin": "^1.2.0",
-        "ts-loader": "^2.3.1",
-        "tsc": "^1.20150623.0",
-        "typescript": "^2.4.2",
-        "webpack": "^3.4.1"
-    }
+        "autoprefixer": "^6.7.7",
+        "babel-core": "^6.25.0",
+        "babel-loader": "^7.1.1",
+        "babel-plugin-transform-class-properties": "^6.24.1",
+        "babel-plugin-transform-object-rest-spread": "^6.23.0",
+        "babel-preset-es2015": "^6.24.1",
+        "css-loader": "^0.28.4",
+        "dotenv-webpack": "^1.5.4",
+        "es6-promise": "^3.3.1",
+        "extract-text-webpack-plugin": "^3.0.0",
+        "node-sass": "^3.13.1",
+        "postcss": "^6.0.8",
+        "postcss-loader": "^0.7.0",
+        "sass-loader": "^3.2.3",
+        "style-loader": "^0.13.2",
+        "stylelint": "^8.0.0",
+        "stylelint-selector-bem-pattern": "^1.1.0",
+        "stylelint-webpack-plugin": "^0.2.0",
+        "webpack": "^3.4.1",
+        "webpack-dev-server": "^1.16.5"
+    },
+    "keywords": ["babel", "boilerplate", "es6", "sass", "starter-kit", "workflow", "webpack"]
 }
